--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 cargo_metadata = "0.19"
+
+[dev-dependencies]
+tempfile = "3"
